# SuperEIO

./: README.md  index.html
config/: supereio_rviz.rviz
config/240c/: davis346.yaml
config/hku_mono/: davis346.yaml
config/hku_stereo/: davis346.yaml  davis346_outdoor.yaml
config/mvsec/: davis346.yaml
config/vector/: davis346.yaml
config/vector_large/: davis346.yaml
dependency/events_repacking_helper/launch/: repacking.launch
dependency/events_repacking_helper/src/: EventMessageEditor.cpp
event_detector/: CMakeLists.txt  package.xml
event_detector/src/: event_detector.cpp  event_detector.h  event_detector_node.cpp  global_config.h  parameters.cpp  parameters.h  read_configs.h  super_eventpoint.cpp  super_eventpoint.h  utils.cc  utils.h
event_detector/src/TS_generator/: TS_generator.cc  TS_generator.h
event_detector/src/output/: super_eventpoint.engine
event_detector/src/utility/: visualization.cpp  visualization.h
loop_closure/: CMakeLists.txt  package.xml
loop_closure/src/: global_config.h  keyframe.cpp  keyframe.h  loop_closure.cpp  loop_closure.h  loop_closure_node.cpp  parameters.h  point_matching.cc  point_matching.h  read_configs.h  super_eventmatch.cpp  super_eventmatch.h  super_eventpoint.cpp  super_eventpoint.h  utils.h
script/: run.sh
static/css/: index.css
static/js/: index.js
supereio_ba/: CMakeLists.txt  package.xml
supereio_ba/launch/: 240c.launch  hku_mono.launch  hku_outdoor.launch  hku_stereo.launch  mvsec.launch  vector.launch  vector_large.launch
supereio_ba/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
supereio_ba/src/factor/: integration_base.h  marginalization_factor.cpp
supereio_ba/src/initial/: initial_alignment.h
supereio_ba/src/utility/: visualization.cpp  visualization.h
